# kasoowa-backend

./: .env  .gitignore file  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-build.sh  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh  kafka-init.sh  nginx.conf  prometheus.yml  setup-dirs.sh
migrations/2025-03-21-000001_create_auth_tables/: up.sql
migrations/2025-03-21-000001_create_products_tables/: down.sql  up.sql
nginx/conf.d/: default.conf 
scripts/: hot-reload.sh
src/: config.rs  db.rs  errors.rs  event_handlers.rs  kafka.rs  lib.rs  logger.rs  main.rs  middleware.rs  models.rs  schema.rs  services.rs
