[package]
name = "kasoowa"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1.33.0", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "numeric", "r2d2"] }
dotenv = "0.15.0"
dotenvy = "0.15"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.20"
bcrypt = "0.15.0"
jsonwebtoken = "8.3.0"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
rand = "0.8.5"
thiserror = "1.0.50"
r2d2 = "0.8.10"
rust_decimal = { version = "1.32", features = ["serde"] }
rust_decimal_macros = "1.32"

# Build dependencies with vendored features to avoid external dependencies
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] }
rdkafka = { version = "0.33", features = ["cmake-build", "ssl"] }
